# pwndar

./: .gitignore  Cargo.toml  README.md  keys.yaml
src/: banner.txt  configuration.rs  lib.rs  main.rs
src/hibp/: mod.rs
tests/: email_verify.rs
