[package]
name = "pwndar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pwndar"

[dependencies]
regex = "1"
ureq = { version = "2.3.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
config = "0.11.0"
colored = "2.0.0"